<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for mobile_robot</p>
    <p>This package contains configuration data, 3D models and launch files
for mobile_robot robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <build_depend>geometry_msgs</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <!-- <build_depend>robot_state_publisher</build_depend> -->
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <!-- <build_export_depend>robot_state_publisher</build_export_depend> -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <!-- <exec_depend>robot_state_publisher</exec_depend> -->


  <export>
    <architecture_independent />
  </export>
</package>